# playground

./: .gitignore  README.md
.github/: dependabot.yml
cplusplus/std_ptr/: CMakeLists.txt  std_ptr_main.cpp
cplusplus/std_ptr/utils/private/: type_to_string.cpp
cplusplus/utils/: CMakeLists.txt
cplusplus/utils/private/: environment.cpp
cplusplus/utils/public/: code_boilerplate.h  environment.h  is_pointer_type.h  type_define.h  type_to_string.h
docker/: basic_commands.sh  create-network.sh  pull_nginx.sh  run_nginx.sh  run_nginx_w_name.sh  run_nginx_w_port_binding.sh  start_stop_existing_container.sh  view_logs.sh
docker/dockerize/app-nodejs/: Dockerfile  build.sh  run.sh
docker/dockerize/postgres/: Dockerfile  build.sh
go/allinone/: Dockerfile  README.md  build.sh  run.sh
go/allinone/shell/: request.sh
go/allinone/src/: go.mod  main.go
go/env_test/: env_test.go
go/exception/src/: go.mod  wrap_test.go
go/generic/: go.mod
go/grpc/src/: Makefile  README.md  go.mod  go.sum
go/printenv/: go.mod
go/printenv/src/: main.go
go/protobuf/src/: go.mod
go/src/env_test/: env_test.go  go.mod
go/src/generic/: generic_test.go
sql/: explain.sh  show_index.sh  sub_selects.sh
sql/import_sql/: demo_types.sql  user_details.sql
sql/postgres/foreign/: query-gamedb.sh  rm-postgres-foreign.sh  run-postgres-foreign.sh  start-postgres-foreign.sh
sql/postgres/gamedb/: class.sql  query-gamedb.sh  query.sql  rm-postgres-gamedb.sh  run-postgres-gamedb.sh  start-postgres-gamedb.sh  user.sql
ssltls/: ca-cert.pem  ca-cert.srl  ca-key.pem  gen.sh  print_certificate.sh  server-cert.pem  server-ext.cnf  server-key.pem  server-req.pem  verify.sh
terraform/aws/dynamodb-demo/: dynamodb-item.tf  dynamodb.tf  main.tf
terraform/aws/ecr-demo/: ecr.tf  main.tf
terraform/aws/global/: main.tf
(+118 files in other folders)
